--- a/motorECU/motorECU.ioc
+++ b/motorECU/motorECU.ioc
@@ -17,13 +17,16 @@ Mcu.IP0=ADC1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IPNb=4
+Mcu.IP4=USART1
+Mcu.IPNb=5
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA0-WKUP
-Mcu.Pin1=VP_SYS_VS_ND
-Mcu.Pin2=VP_SYS_VS_Systick
-Mcu.PinsNb=3
+Mcu.Pin1=PA9
+Mcu.Pin2=PA10
+Mcu.Pin3=VP_SYS_VS_ND
+Mcu.Pin4=VP_SYS_VS_Systick
+Mcu.PinsNb=5
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -41,6 +44,10 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Signal=ADCx_IN0
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -82,6 +89,9 @@ RCC.PLLMCOFreq_Value=4000000
 RCC.TimSysFreq_Value=8000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
+USART1.BaudRate=9600
+USART1.IPParameters=VirtualMode,BaudRate
+USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_ND.Mode=No_Debug
 VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_Systick.Mode=SysTick
