Added motor code

--- a/motorECU/motorECU.ioc
+++ b/motorECU/motorECU.ioc
@@ -26,10 +26,12 @@ Mcu.Pin0=PA0-WKUP
 Mcu.Pin1=PA1
 Mcu.Pin2=PA9
 Mcu.Pin3=PA10
-Mcu.Pin4=VP_SYS_VS_ND
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.Pin6=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=7
+Mcu.Pin4=PA13
+Mcu.Pin5=PA14
+Mcu.Pin6=VP_SYS_VS_ND
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.Pin8=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -51,6 +53,10 @@ PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA1.Signal=ADCx_IN1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA13.Locked=true
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Locked=true
+PA14.Signal=SYS_JTCK-SWCLK
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PinOutPanel.RotationAngle=0
@@ -84,7 +90,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
