--- a/motorECU/motorECU.ioc
+++ b/motorECU/motorECU.ioc
@@ -28,10 +28,9 @@ Mcu.Pin2=PA9
 Mcu.Pin3=PA10
 Mcu.Pin4=PA13
 Mcu.Pin5=PA14
-Mcu.Pin6=VP_SYS_VS_ND
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.Pin8=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=9
+Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.Pin7=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -54,8 +53,10 @@ PA1.Signal=ADCx_IN1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.Locked=true
+PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Locked=true
+PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
@@ -107,8 +108,6 @@ TIM2.IPParameters=Channel-PWM Generation1 CH1
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
-VP_SYS_VS_ND.Mode=No_Debug
-VP_SYS_VS_ND.Signal=SYS_VS_ND
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
