--- a/motorECU/motorECU.ioc
+++ b/motorECU/motorECU.ioc
@@ -10,6 +10,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
@@ -17,20 +18,23 @@ Mcu.IP0=ADC1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP4=TIM1
+Mcu.IP5=TIM2
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA0-WKUP
 Mcu.Pin1=PA1
-Mcu.Pin2=PA9
-Mcu.Pin3=PA10
+Mcu.Pin2=PA8
+Mcu.Pin3=PA9
 Mcu.Pin4=PA13
 Mcu.Pin5=PA14
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.Pin7=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=8
+Mcu.Pin6=PB6
+Mcu.Pin7=PB7
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.Pin9=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -50,16 +54,22 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA1.Signal=ADCx_IN1
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
 PA13.Locked=true
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=Encoder_1
+PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=Encoder_2
+PA9.Signal=S_TIM1_CH2
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -91,7 +101,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
@@ -101,6 +111,10 @@ RCC.PLLMCOFreq_Value=4000000
 RCC.TimSysFreq_Value=8000000
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,Encoder_Interface
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
+SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
