Initial Crypto Module

--- a/motorECU/motorECU.ioc
+++ b/motorECU/motorECU.ioc
@@ -26,15 +26,17 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA0-WKUP
 Mcu.Pin1=PA1
-Mcu.Pin2=PA8
-Mcu.Pin3=PA9
-Mcu.Pin4=PA13
-Mcu.Pin5=PA14
-Mcu.Pin6=PB6
-Mcu.Pin7=PB7
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=10
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PA5
+Mcu.Pin3=PA6
+Mcu.Pin4=PA8
+Mcu.Pin5=PA9
+Mcu.Pin6=PA13
+Mcu.Pin7=PA14
+Mcu.Pin8=PB6
+Mcu.Pin9=PB7
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -60,6 +62,10 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PA6.Locked=true
+PA6.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=Encoder_1
 PA8.Signal=S_TIM1_CH1
